--- a/css/style.css
+++ b/css/style.css
@@ -47,8 +47,8 @@ header p {
 
 /* Футер */
 footer {
-  background-color: #343a40;
-  color: #fff;
+  background-color: #303030;
+  color: #2b2b2b;
   padding: 10px 0;
 }
 
