--- a/css/style.css
+++ b/css/style.css
@@ -11,18 +11,32 @@ body {
 header {
   background: linear-gradient(45deg, #007bff, #6610f2);
   color: white;
-  padding: 50px 0;
+  padding: 20px 0;
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
 }
 
 header h1 {
   font-size: 2.5rem;
   margin: 0;
   font-weight: bold;
+  flex-grow: 1; /* Это позволяет заголовку занимать всё доступное пространство */
 }
 
 header p {
   margin: 10px 0 0;
+}
+
+/* Кнопка меню */
+.navbar-toggler {
+  position: absolute;
+  right: 20px; /* Устанавливаем её в правый верхний угол */
+  top: 50%; /* Центрируем по вертикали */
+  transform: translateY(-50%); /* Выравнивание по вертикали относительно середины */
+  padding: 10px;
 }
 
 /* Карточки инструментов */
@@ -125,7 +139,9 @@ footer p {
   .navbar-toggler {
     position: absolute;
     right: 20px; /* Устанавливаем её в правый верхний угол */
-    top: 20px;
+    top: 50%; /* Центрируем по вертикали */
+    transform: translateY(-50%); /* Выравнивание по вертикали относительно середины */
+    padding: 10px;
   }
 
   /* Центрирование навигации */
